[SYN-244] add list and count notification handler (#126)
* add: list notification

* add: count unread

* swagger

* add: test

* add: afterEach
